reworked python build to be less version-specific
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3955 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/python/Makefile
+++ b/external/python/Makefile
@@ -25,13 +25,19 @@ COMP_OPT=
 
 endif
 
+sources:: Python-$(VERSION).tar.bz2
+
+expand:: Python-$(VERSION)-expanded
+
+
 ifeq ($(OS),Cygwin)
 
 BINDIR=$(PREFIX)/bin
+PV=$(subst .,,$(PYTHON_VER))
 
 $(SRC)/PCbuild/pcbuild.sln:
-	(cd win32; tar -cf - *.sln *.vcproj) | (cd $(SRC)/PCbuild; tar -xf -)
-
+	(cd win32/$(VERSION); \
+         tar -cf - *.sln *.vcproj) | tar -C $(SRC)/PCbuild -xf -
 
 ifeq ($(DEBUG),1)
 MKBZIP2MF=sed -e "s/ -MD -Ox / -MDd -Zi /" makefile.msc > $(BUILD)/makefile$(SUFFIX).msc
@@ -40,7 +46,6 @@ else
 MKBZIP2MF=echo ok
 MKZLIBMF=echo ok
 endif
-
 
 bzip2-$(BZIP2VERSION)/$(BUILD)/makefile$(SUFFIX).msc:
 	cd bzip2-$(BZIP2VERSION)/; \
@@ -56,7 +61,6 @@ bzip2-$(BZIP2VERSION)/libbz2$(SUFFIX).lib: bzip2-$(BZIP2VERSION)/$(BUILD)/makefi
 
 bzip2: bzip2-$(BZIP2VERSION)/libbz2$(SUFFIX).lib
 
-
 zlib-$(ZLIBVERSION)/$(BUILD)/win32/makefile$(SUFFIX).msc:
 	cd zlib-$(ZLIBVERSION)/; \
 	mkdir $(BUILD); \
@@ -71,119 +75,80 @@ zlib-$(ZLIBVERSION)/zlib$(SUFFIX).lib: zlib-$(ZLIBVERSION)/$(BUILD)/win32/makefi
 
 zlib: zlib-$(ZLIBVERSION)/zlib$(SUFFIX).lib
 
-
 build: expand apply compile installext
 	mkdir -p $(BUILD_ROOT)/$(SNAP)/$(SITE)
 
 compile: $(SRC)/PCbuild/pcbuild.sln bzip2 zlib
-	cd $(SRC)/PCbuild; \
-        devenv.com pcbuild.sln /build $(Snap)
+	cd $(SRC)/PCbuild; devenv.com pcbuild.sln /build $(Snap)
 
 installext:
 	mkdir -p $(BINDIR)/DLLs $(BINDIR)/Include $(BINDIR)/Lib $(BINDIR)/libs
-	(cd $(SRC)/PCbuild; \
-         tar cf - python$(SUFFIX).exe \
+	tar -C $(SRC)/PCbuild \
+            -cf - python$(SUFFIX).exe \
                   pythonw$(SUFFIX).exe \
-                  python23$(SUFFIX).dll) | \
-        (cd $(BINDIR); tar -xvf -)
-	(cd $(SRC)/PCbuild; \
-         tar cf - python23$(SUFFIX).lib \
-                  python23$(SUFFIX).exp) | \
-        (cd $(BINDIR)/libs; tar -xvf -)
-	(cd $(SRC)/Lib; tar cf - *.py) | (cd $(BINDIR)/Lib; tar -xvf -)
-	(cd $(SRC)/PCbuild; tar cf - *.pyd) | (cd $(BINDIR)/DLLs; tar -xvf -)
+                  python$(PV)$(SUFFIX).dll | tar -C $(BINDIR) -xvf -
+	tar -C $(SRC)/PCbuild \
+            -cf - python$(PV)$(SUFFIX).lib \
+                  python$(PV)$(SUFFIX).exp | tar -C $(BINDIR)/libs -xvf -
+	(cd $(SRC)/Lib; tar -cf - *.py) | tar -C $(BINDIR)/Lib -xvf -
+	(cd $(SRC)/PCbuild; tar -C -cf - *.pyd) | tar -C $(BINDIR)/DLLs -xvf -
 	for mod in compiler distutils email encodings hotshot xml \
                    bsddb logging; \
         do \
-            (cd $(SRC)/Lib; tar cf - `find $$mod -name '*.py'`) | \
-            (cd $(BINDIR)/Lib; tar -xvf -); \
+            (cd $(SRC)/Lib; \
+             tar -cf - `find $$mod -name '*.py'`) | tar -C $(BINDIR)/Lib \
+                                                        -xvf - ; \
         done
-	(cd $(SRC)/Include; tar cf - *.h) | (cd $(BINDIR)/Include; tar -xvf -)
+	(cd $(SRC)/Include; tar -cf - *.h) | tar -C $(BINDIR)/Include -xvf -
 	cp -p $(SRC)/PC/pyconfig.h $(BINDIR)/Include
 
-Python-$(VERSION).tgz:
-	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz
-	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz.md5
+sources:: bzip2-$(BZIP2VERSION).tar.gz zlib-$(ZLIBVERSION).tar.gz
 
-bzip2-$(BZIP2VERSION).tar.gz:
-	$(CURL) http://builds.o11n.org/external/bzip2-$(BZIP2VERSION).tar.gz
-	$(CURL) http://builds.o11n.org/external/bzip2-$(BZIP2VERSION).tar.gz.md5
-
-zlib-$(ZLIBVERSION).tar.gz:
-	$(CURL) http://builds.o11n.org/external/zlib-$(ZLIBVERSION).tar.gz
-	$(CURL) http://builds.o11n.org/external/zlib-$(ZLIBVERSION).tar.gz.md5
-
-sources: Python-$(VERSION).tgz bzip2-$(BZIP2VERSION).tar.gz zlib-$(ZLIBVERSION).tar.gz
-
-Python-$(VERSION)-expanded: Python-$(VERSION).tgz
-	tar xvzf Python-$(VERSION).tgz
-	touch Python-$(VERSION)-expanded
-
-bzip2-$(BZIP2VERSION)-expanded: bzip2-$(BZIP2VERSION).tar.gz
-	tar xvzf bzip2-$(BZIP2VERSION).tar.gz
-	touch bzip2-$(BZIP2VERSION)-expanded
-
-zlib-$(ZLIBVERSION)-expanded: zlib-$(ZLIBVERSION).tar.gz
-	tar xvzf zlib-$(ZLIBVERSION).tar.gz
-	touch zlib-$(ZLIBVERSION)-expanded
-
-expand: Python-$(VERSION)-expanded bzip2-$(BZIP2VERSION)-expanded zlib-$(ZLIBVERSION)-expanded
-
-apply: patches
-	patch -Nup0 < patches; echo ok
+expand:: bzip2-$(BZIP2VERSION)-expanded zlib-$(ZLIBVERSION)-expanded
 
 clean:
-	rm -fr bzip2-$(BZIP2VERSION)/$(BUILD) bzip2-$(BZIP2VERSION)/libbz2$(SUFFIX).lib
-	rm -fr zlib-$(ZLIBVERSION)/$(BUILD) zlib-$(ZLIBVERSION)/zlib$(SUFFIX).lib
-	cd $(SRC)/PCbuild; devenv.com pcbuild.sln /clean $(Snap) || true
+	rm -rf bzip2-$(BZIP2VERSION)/$(BUILD) bzip2-$(BZIP2VERSION)/libbz2$(SUFFIX).lib
+	rm -rf zlib-$(ZLIBVERSION)/$(BUILD) zlib-$(ZLIBVERSION)/zlib$(SUFFIX).lib
+	cd $(SRC)/PCbuild; devenv.com pcbuild.sln /clean $(Snap); echo ok
 	rm -f $(SRC)/PCbuild/pcbuild.sln
 
 snap: 
-	cd $(BUILD_ROOT); \
-	find $(SNAP)/$(SITE)/libs -name "*.pyc" | xargs rm -f; \
-	find $(SNAP)/$(SITE)/libs -name "*.pyo" | xargs rm -f; \
-        tar -cvzf $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz \
+	find $(BUILD_ROOT)/$(SNAP)/$(SITE)/libs -name "*.pyc" | xargs rm -f
+	find $(BUILD_ROOT)/$(SNAP)/$(SITE)/libs -name "*.pyo" | xargs rm -f
+	tar -C $(BUILD_ROOT) \
+            -cvzf $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/bin/python*.* $(SNAP)/bin/libs \
                   $(SNAP)/bin/DLLs $(SNAP)/bin/Include $(SNAP)/bin/Lib \
             --exclude site-packages \
-            --exclude test; \
-	$(MD5) $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz > $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz.md5
+            --exclude test
+	$(MD5) $(BUILD_ROOT)/$(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz > \
+               $(BUILD_ROOT)/$(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz.md5
 
 else
 
 ifeq ($(OS),Darwin)
 
 $(SRC)/$(BUILD)/Makefile:
-	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
+	mkdir -p $(SRC)/$(BUILD)
+	cd $(SRC)/$(BUILD); \
 	../configure --prefix=$(PREFIX) $(CONF_DBG) \
                      --enable-framework=$(PREFIX)/Library/Frameworks
 
-build: expand apply
+build: expand $(SRC)/$(BUILD)/Makefile apply
 	$(MAKE) -C $(SRC)/$(BUILD) DB=$(PREFIX)/db $(COMP_OPT) frameworkinstallframework
 	$(MAKE) -C $(SRC)/$(BUILD) DB=$(PREFIX)/db $(COMP_OPT) frameworkinstallapps
 	mkdir -p $(BUILD_ROOT)/$(SNAP)/$(SITE)
 
 snap: 
-	cd $(BUILD_ROOT); \
-	find $(SNAP)/Library/Frameworks/Python.framework -name "*.pyc" | xargs rm -f; \
-	find $(SNAP)/Library/Frameworks/Python.framework -name "*.pyo" | xargs rm -f; \
-        tar -cvzf $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz \
+	find $(BUILD_ROOT)/$(SNAP)/Library/Frameworks/Python.framework -name "*.pyc" | xargs rm -f
+	find $(BUILD_ROOT)/$(SNAP)/Library/Frameworks/Python.framework -name "*.pyo" | xargs rm -f
+	tar -C $(BUILD_ROOT) \
+            -cvzf $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/Library/Frameworks/Python.framework \
             --exclude site-packages \
-            --exclude test; \
-	$(MD5) $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz > $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz.md5
-
-Python-$(VERSION).tgz:
-	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz
-	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz.md5
-
-sources: Python-$(VERSION).tgz
-
-Python-$(VERSION)-expanded: Python-$(VERSION).tgz
-	tar xvzf Python-$(VERSION).tgz
-	touch Python-$(VERSION)-expanded
-
-expand: Python-$(VERSION)-expanded
+            --exclude test
+	$(MD5) $(BUILD_ROOT)/$(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz > \
+               $(BUILD_ROOT)/$(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz.md5
 
 else
 
@@ -194,7 +159,7 @@ $(SRC)/$(BUILD)/Makefile:
 bzip2-$(BZIP2VERSION)/libbz2.a:
 	make -C bzip2-$(BZIP2VERSION) libbz2.a
 
-build: expand bzip2-$(BZIP2VERSION)/libbz2.a apply
+build: expand bzip2-$(BZIP2VERSION)/libbz2.a $(SRC)/$(BUILD)/Makefile apply
 	install -D bzip2-$(BZIP2VERSION)/libbz2.a $(PREFIX)/lib/libbz2.a
 	install -D bzip2-$(BZIP2VERSION)/bzlib.h $(PREFIX)/include/bzlib.h
 	$(MAKE) -C $(SRC)/$(BUILD) DB=$(PREFIX)/db $(COMP_OPT) install
@@ -212,35 +177,44 @@ snap:
             --exclude test; \
 	$(MD5) $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz > $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz.md5
 
-Python-$(VERSION).tgz:
-	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz
-	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz.md5
+sources:: bzip2-$(BZIP2VERSION).tar.gz
+
+expand:: bzip2-$(BZIP2VERSION)-expanded
+
+endif
+
+clean:
+	rm -rf $(SRC)/$(BUILD)
+
+endif
+
+
+apply: patches-$(VERSION)
+	patch -Nup0 < patches-$(VERSION); echo ok
+
+Python-$(VERSION).tar.bz2:
+	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tar.bz2
+	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tar.bz2.md5
 
 bzip2-$(BZIP2VERSION).tar.gz:
 	$(CURL) http://builds.o11n.org/external/bzip2-$(BZIP2VERSION).tar.gz
 	$(CURL) http://builds.o11n.org/external/bzip2-$(BZIP2VERSION).tar.gz.md5
 
-sources: Python-$(VERSION).tgz bzip2-$(BZIP2VERSION).tar.gz
+zlib-$(ZLIBVERSION).tar.gz:
+	$(CURL) http://builds.o11n.org/external/zlib-$(ZLIBVERSION).tar.gz
+	$(CURL) http://builds.o11n.org/external/zlib-$(ZLIBVERSION).tar.gz.md5
 
-Python-$(VERSION)-expanded: Python-$(VERSION).tgz
-	tar xvzf Python-$(VERSION).tgz
+Python-$(VERSION)-expanded: Python-$(VERSION).tar.bz2
+	bunzip2 -c Python-$(VERSION).tar.bz2 | tar -xvf -
 	touch Python-$(VERSION)-expanded
 
 bzip2-$(BZIP2VERSION)-expanded: bzip2-$(BZIP2VERSION).tar.gz
 	tar xvzf bzip2-$(BZIP2VERSION).tar.gz
 	touch bzip2-$(BZIP2VERSION)-expanded
 
-expand: Python-$(VERSION)-expanded bzip2-$(BZIP2VERSION)-expanded
-
-endif
-
-apply: $(SRC)/$(BUILD)/Makefile patches
-	patch -Nup0 < patches; echo ok
-
-clean:
-	rm -rf $(SRC)/$(BUILD)
-
-endif
+zlib-$(ZLIBVERSION)-expanded: zlib-$(ZLIBVERSION).tar.gz
+	tar xvzf zlib-$(ZLIBVERSION).tar.gz
+	touch zlib-$(ZLIBVERSION)-expanded
 
 upload: python-$(SNAP)-$(RELVER).tar.gz
 	scp python-$(SNAP)-$(RELVER).tar.gz $(UPLOAD)
@@ -250,4 +224,4 @@ install: python-$(SNAP)-$(RELVER).tar.gz
 	tar -C $(CHANDLERBIN) -xvzf python-$(SNAP)-$(RELVER).tar.gz
 
 _realclean::
-	rm -fr zlib-* bzip2-*
+	@rm -rf zlib-* bzip2-*
