make build less hardcoded vis-a-vis python version
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3956 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/PyLucene/Makefile
+++ b/external/PyLucene/Makefile
@@ -102,6 +102,7 @@ build: expand apply
             DB_LIB_VER=$(DB_LIB_VER) \
             PREFIX_DB=$(PREFIX_DB) \
             BUILD_DB=build_$(SNAP) \
+            PYTHON_VER=$(PYTHON_VER) \
             all install
 
 clean:
