added build support for python 2.4
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3993 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/python/Makefile
+++ b/external/python/Makefile
@@ -105,6 +105,9 @@ installext:
 sources:: bzip2-$(BZIP2VERSION).tar.gz zlib-$(ZLIBVERSION).tar.gz
 
 expand:: bzip2-$(BZIP2VERSION)-expanded zlib-$(ZLIBVERSION)-expanded
+ifeq ($(VERSION),2.4)
+	rm -f $(SRC)/PCbuild/pcbuild.sln
+endif
 
 clean:
 	rm -rf bzip2-$(BZIP2VERSION)/$(BUILD) bzip2-$(BZIP2VERSION)/libbz2$(SUFFIX).lib
