upgraded to SWIG 1.3.22, building with VC on Windows now
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4016 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -40,7 +40,7 @@ ifeq ($(OS),Cygwin)
 PYTHON:=$(PREFIX)/bin/$(PYTHON).exe
 SITE=bin/Lib/site-packages
 PLATFORM=windows
-SWIG=$(PREFIX)/bin/swig.exe
+SWIG=$(PREFIX)/bin/swig/swig.exe
 MD5=md5sum.exe
 MD5CHECK=$(MD5) -c
 else
