added creation of bin,lib,include before build starts
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4025 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -18,6 +18,9 @@ SYSTEMS=persistence/db \
 
 .PHONY: sources expand binaries $(SYSTEMS)
 
+env::
+	mkdir -p $(PREFIX)/bin $(PREFIX)/lib $(PREFIX)/include
+
 sources: env
 	for system in $(SYSTEMS); \
 	do \
