Fix for part of Bug#2227.  The MSW build of wxWidgets is still using multi-lib mode so we need to tell the wxPython build about it.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4043 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -39,6 +39,7 @@ wxPython:
                            USE_SWIG=0 \
                            SWIG=`cygpath -aw $(SWIG)` \
                            INSTALL_MULTIVERSION=0 \
+			   MONOLITHIC=0 \
                            build $(DIST_OPT) \
                            install \
                            FINAL=$(FINAL) HYBRID=0
