Ignore make clean errors.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4097 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/swig/Makefile
+++ b/external/swig/Makefile
@@ -20,7 +20,7 @@ swig: $(SRC)/SWIG13.sln
 	tar -C $(SRC) -cf - SWIG.exe Lib | tar -C $(PREFIX)/bin/swig -xvf -
 
 clean:
-	cd $(SRC); devenv.com SWIG13.sln /clean Release
+	cd $(SRC); devenv.com SWIG13.sln /clean Release; echo ok
 
 else
 
