--- a/external/persistence/db/win32/build_all.vcproj
+++ b/external/persistence/db/win32/build_all.vcproj
@@ -35,6 +35,7 @@
 				Name="VCNMakeTool"
 				BuildCommandLine="echo DB Debug version built."
 				ReBuildCommandLine="echo DB Debug version built. "
+				CleanCommandLine="echo DB Debug version cleaned."
 				Output="build_all.exe"/>
 		</Configuration>
 		<Configuration
@@ -61,6 +62,7 @@
 				Name="VCNMakeTool"
 				BuildCommandLine="echo DB Release version built."
 				ReBuildCommandLine="echo DB Release version built. "
+				CleanCommandLine="echo DB Release version cleaned."
 				Output="build_all.exe"/>
 		</Configuration>
 	</Configurations>
