Changed the directory used to generate binaries from a non-existent path.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4100 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/dateutil/Makefile
+++ b/external/dateutil/Makefile
@@ -2,7 +2,7 @@ include ../Makefile.inc
 
 VERSION=0.5
 RELVER=$(VERSION)-1
-DATEUTIL=$(EXTERNAL)/dateutil
+DATEUTIL=$(BUILD_ROOT)/dateutil
 MANIFEST=$(SNAP)/$(SITE)/dateutil
 BUILD=build_$(SNAP)
 SRC=python-dateutil-$(VERSION)
