Added dateutil and vobject to the main external build.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4105 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -14,7 +14,9 @@ SYSTEMS=persistence/db \
         zope \
         twisted \
         pychecker \
-        yapps
+        yapps \
+	vobject \
+	dateutil
 
 .PHONY: sources expand binaries $(SYSTEMS)
 
