Bug 1747, and partially bug 1975. Twisted+M2Crypto integration part 2, no M2Crypto specific changes required in Twisted. Making Chandler use the new way. Validating server certificate, but not yet doing post connection check.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4163 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/twisted/Makefile
+++ b/external/twisted/Makefile
@@ -1,6 +1,6 @@
 
 VERSION=r11303
-RELVER=$(VERSION)-3
+RELVER=$(VERSION)-4
 TWISTED=$(BUILD_ROOT)/twisted
 SRC=$(TWISTED)/Twisted-$(VERSION)
 
@@ -15,16 +15,10 @@ applysmtp:
 applyimap4:
 	patch -Nup0 < imap4-patches; echo ok
 
-# Temporary until refactored and integrated into Twisted
-applym2:
-	rm -f $(SRC)/twisted/internet/m2ssl.py ; \
-	cd $(SRC); \
-	patch -Nup0<../m2-patches;echo ok
-
 apply: patches-$(VERSION)
 	patch -Nup0 < patches-$(VERSION);echo ok
 
-build: expand apply applysmtp applyimap4 applym2
+build: expand apply applysmtp applyimap4
 	cd $(SRC); \
 	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
