--- a/external/PyLucene/Makefile
+++ b/external/PyLucene/Makefile
@@ -1,10 +1,10 @@
 
-VERSION=0.9.3-137
-RELVER=$(VERSION)-2
+VERSION=0.9.5
+RELVER=$(VERSION)-1
 PYLUCENE=$(BUILD_ROOT)/PyLucene
 SRC=$(PYLUCENE)/PyLucene-$(VERSION)
 
-DB_VER=4.3.21
+DB_VER=4.3.27
 DB_LIB_VER=$(basename $(DB_VER))
 
 include $(BUILD_ROOT)/Makefile.inc
