--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -20,14 +20,14 @@ endif
 # these get installed into release or debug
 BIN_ARCHIVES=../Launchers-$(SNAP)-0.4-7.tar.gz \
              ../chandlerdb-$(SNAP)-0.4-3.tar.gz \
-             ../db-$(SNAP)-4.3.21-1.tar.gz \
+             ../db-$(SNAP)-4.3.27-1.tar.gz \
              ../egenix-mx-base-$(SNAP)-2.1.0-3.tar.gz \
              ../epydoc-$(SNAP)-2.1-2.tar.gz \
              ../jabberpy-$(SNAP)-0.4-0-2.tar.gz \
              ../libxml2-$(SNAP)-2.6.10-2.tar.gz \
              ../m2crypto-$(SNAP)-0.12-7.tar.gz \
              ../pychecker-$(SNAP)-0.8.13-2.tar.gz \
-             ../pylucene-$(SNAP)-0.9.3-137-2.tar.gz \
+             ../pylucene-$(SNAP)-0.9.5-1.tar.gz \
              ../python-$(SNAP)-2.4-2.tar.gz \
              ../soappy-$(SNAP)-0.10.2-2.tar.gz \
              ../twisted-$(SNAP)-r11303-4.tar.gz \
