- Fixed bug in vobject that prevented parsing EXDATE.  Created a new patch because cvs won't allow committing files with windows carriage returns, which unfortunately are needed for patches-0.1 (they're already there).
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4225 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/vobject/Makefile
+++ b/external/vobject/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 
 VERSION=0.1
-RELVER=$(VERSION)-2
+RELVER=$(VERSION)-3
 VOBJECT=$(BUILD_ROOT)/vobject
 MANIFEST=$(SNAP)/$(SITE)/vobject
 BUILD=build_$(SNAP)
@@ -21,6 +21,7 @@ expand: $(SRC)-expanded
 
 apply: patches-$(VERSION)
 	patch -Nup0 < patches-$(VERSION); echo ok
+	patch -Nup0 < patches2-$(VERSION); echo ok
 
 build: expand apply
 	cd $(SRC); \
