applied patch for bug 2515 - adds deployment info for mac osx build
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4620 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -46,6 +46,7 @@ MD5CHECK=$(MD5) -c
 else
 ifeq ($(OS),Darwin)
 FRAMEWORK=Library/Frameworks/Python.framework/Versions/$(PYTHON_VER)
+MACOSX_DEPLOYMENT_TARGET=10.3
 PYTHON:=$(PREFIX)/$(FRAMEWORK)/bin/$(PYTHON)
 SITE=$(FRAMEWORK)/lib/python$(PYTHON_VER)/site-packages
 PLATFORM=macosx
