added setting of MACOSX_DEPLOYMENT_TARGET to the frameworkinstallframework and frameworkinstallapps targets as it turns out that the configure variable value is not passed to all downstream targets
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4624 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/python/Makefile
+++ b/external/python/Makefile
@@ -138,8 +138,8 @@ $(SRC)/$(BUILD)/Makefile:
                      --enable-framework=$(PREFIX)/Library/Frameworks
 
 build: expand $(SRC)/$(BUILD)/Makefile apply
-	$(MAKE) -C $(SRC)/$(BUILD) DB=$(PREFIX)/db $(COMP_OPT) frameworkinstallframework
-	$(MAKE) -C $(SRC)/$(BUILD) DB=$(PREFIX)/db $(COMP_OPT) frameworkinstallapps
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(MAKE) -C $(SRC)/$(BUILD) DB=$(PREFIX)/db $(COMP_OPT) frameworkinstallframework
+	MACOSX_DEPLOYMENT_TARGET=$(MACOSX_DEPLOYMENT_TARGET) $(MAKE) -C $(SRC)/$(BUILD) DB=$(PREFIX)/db $(COMP_OPT) frameworkinstallapps
 	mkdir -p $(BUILD_ROOT)/$(SNAP)/$(SITE)
 
 snap: 
